# django_x

./: README.md  pyproject.toml
config/: settings.py  urls.py
snack/: models.py  tests.py  urls.py  views.py
snack/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
templates/: _base.html
templates/pages/: home.html
templates/snack/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
