[tool.poetry]
name = "django_x"
version = "0.1.0"
description = ""
authors = ["majedalswaeer <majedalswaeer69@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-allauth = "^0.46.0"
django-crispy-forms = "^1.13.0"
django-debug-toolbar = "^3.2.2"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
